--- a/pageThree.html
+++ b/pageThree.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,18 +8,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
 </head>
 
-
 <body>
-<div id="box">
-
-<section id="faded">
-<h2>You made me cry, but my 
-    <a class="page1" id="tears" href="pagetwo.html">
-    <strong>tears</strong> 
-    </a>
-didn't really work until now</h2>
-</section>
- 
+<div>
+    
+<section>
+<h1>I, I was lost in my head</h1>
+<h1>Tell me what you said</h1>
+<h1>I, I was lost in my head</h1>
+<h1>Tell me what you said</h1>
+<h1>And I just wanted to thank you</h1>
+<h1>I, I just wanted to thank you</h1>
+<h1>For all that you put me through</h1>
 
 </div>
 </body>
