--- a/pagetwo.html
+++ b/pagetwo.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,14 +10,14 @@
 
 
 <body>
-<div id="box">
+<div>
 
-<section id="faded">
-<h2>You made me cry, but my 
-    <a class="page1" id="tears" href="pagetwo.html">
-    <strong>tears</strong> 
+<section id="box">
+<h1>You had me 
+    <a class="" id="" href="pageThree.html">
+    fooled
     </a>
-didn't really work until now</h2>
+by a role that you could never play out</h1>
 </section>
  
 
