--- a/index.html
+++ b/index.html
@@ -9,18 +9,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
 </head>
 
-
 <body>
 <div id="box">
 
 <section id="faded">
 <h2>You made me cry, but my 
-    <a class="page1" id="tears" href="pagetwo.html">
+    <a class="page" id="tears" href="pagetwo.html">
     <strong>tears</strong> 
     </a>
 didn't really work until now</h2>
 </section>
- 
 
 </div>
 </body>
