--- a/pageEight.html
+++ b/pageEight.html
@@ -9,16 +9,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
 </head>
 
+
 <body>
-<div id="box">
+<div id="box2">
 
 <section id="faded">
-<h2>You had me fooled by a role that you couldn't ever play
-    <a class="page" id="tears" href="pageThree.html">
-    <strong>out</strong> 
+<h2>For all that you put me</h2>
+
+<div id="">
+    <a href="index.html">
+<h3 id="letterT">t</h3>
+<h3 id="letterH1">h</h3>
+<h3 id="letterR">r</h3>
+<h3 id="letterO">o</h3>
+<h3 id="letterU">u</h2>
+<h3 id="letterG">g</h3>
+<h3 id="letterH2">h</h3>
     </a>
-</h2>
-</section>
 
 </div>
 </body>
