--- a/pageThree.html
+++ b/pageThree.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,16 +10,16 @@
 </head>
 
 <body>
-<div>
+<div id="box">
     
-<section>
-<h1>I, I was lost in my head</h1>
-<h1>Tell me what you said</h1>
-<h1>I, I was lost in my head</h1>
-<h1>Tell me what you said</h1>
-<h1>And I just wanted to thank you</h1>
-<h1>I, I just wanted to thank you</h1>
-<h1>For all that you put me through</h1>
+<section id="faded">
+<h2>I, I was lost in my head</h2>
+<h2>Tell me what you</h2>
+<a class="page" id="tears" href="pagefour.html">
+    <strong>said</strong> 
+    </a>
+</h2>
+</section>
 
 </div>
 </body>
