--- a/pagefive.html
+++ b/pagefive.html
@@ -9,14 +9,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
 </head>
 
+
 <body>
 <div id="box">
 
 <section id="faded">
-<h2>You had me fooled by a role that you couldn't ever play
-    <a class="page" id="tears" href="pageThree.html">
-    <strong>out</strong> 
-    </a>
+<h2>Tell me what you said</h2>
+
+<h2> And I,
+<a class="page" id="tears" href="pagesix.html">
+    <strong>I...</strong> 
+</a>
 </h2>
 </section>
 
