--- a/pagesix.html
+++ b/pagesix.html
@@ -9,17 +9,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
 </head>
 
+
 <body>
 <div id="box">
 
 <section id="faded">
-<h2>You had me fooled by a role that you couldn't ever play
-    <a class="page" id="tears" href="pageThree.html">
-    <strong>out</strong> 
+<h2>I just wanted to thank</h2>
+<a class="page" id="tears" href="pageseven.html">
+    <strong>you</strong> 
     </a>
-</h2>
 </section>
-
+ 
 </div>
 </body>
 </html>
