--- a/pagefour.html
+++ b/pagefour.html
@@ -9,17 +9,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
 </head>
 
+
 <body>
 <div id="box">
 
 <section id="faded">
-<h2>You had me fooled by a role that you couldn't ever play
-    <a class="page" id="tears" href="pageThree.html">
-    <strong>out</strong> 
+<h2>I, I was lost in my</h2>
+<a class="page" id="tears" href="pagefive.html">
+    <strong>head</strong> 
     </a>
 </h2>
 </section>
-
+ 
 </div>
 </body>
 </html>
