--- a/pageseven.html
+++ b/pageseven.html
@@ -9,13 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
 </head>
 
+
 <body>
 <div id="box">
 
 <section id="faded">
-<h2>You had me fooled by a role that you couldn't ever play
-    <a class="page" id="tears" href="pageThree.html">
-    <strong>out</strong> 
+<h2>I, I just wanted to</h2>
+<a class="page" id="tears" href="pageEight.html">
+    <strong>thank you</strong> 
     </a>
 </h2>
 </section>
