--- a/pageEight.html
+++ b/pageEight.html
@@ -11,12 +11,12 @@
 
 
 <body>
-<div id="box2">
+<div id="box">
 
 <section id="faded">
 <h2>For all that you put me</h2>
 
-<div id="">
+<div id="box2">
     <a href="index.html">
 <h3 id="letterT">t</h3>
 <h3 id="letterH1">h</h3>
