--- a/pagetwo.html
+++ b/pagetwo.html
@@ -13,10 +13,18 @@
 <div id="box">
 
 <section id="faded">
-<h2>You had me fooled by a role that you couldn't ever play
-    <a class="page" id="tears" href="pageThree.html">
-    <strong>out</strong> 
-    </a>
+<h2>You had me
+
+<div class="wrapper">
+	<svg>
+		<text x="50%" y="50%" dy=".35em" text-anchor="middle">
+        <a href="pageThree.html">
+			fooled </a>
+		</text>
+	</svg>
+</div>
+
+by a role that you couldn't ever play out
 </h2>
 </section>
 
