--- a/pageEight.html
+++ b/pageEight.html
@@ -12,21 +12,21 @@
 
 <body>
 <div id="box">
-
 <section id="faded">
+    
 <h2>For all that you put me</h2>
-
+</div>
 <div id="box2">
     <a href="index.html">
-<h3 id="letterT">t</h3>
+<h3 id ="letterT">t</h3>
 <h3 id="letterH1">h</h3>
 <h3 id="letterR">r</h3>
 <h3 id="letterO">o</h3>
 <h3 id="letterU">u</h2>
 <h3 id="letterG">g</h3>
 <h3 id="letterH2">h</h3>
+<h3 id="speccharacter">.</h3>
     </a>
 
-</div>
 </body>
 </html>
