--- a/pagetwo.html
+++ b/pagetwo.html
@@ -11,10 +11,9 @@
 
 <body>
 <div id="box">
-
 <section id="faded">
-<h2>You had me
 
+<h2>You had me
 <div class="wrapper">
 	<svg>
 		<text x="50%" y="50%" dy=".35em" text-anchor="middle">
@@ -23,8 +22,11 @@
 		</text>
 	</svg>
 </div>
-
-by a role that you couldn't ever play out
+<h2>
+by a role that you couldn't
+</h2>
+<h2>
+ever play out
 </h2>
 </section>
 
