--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="box">
 
 <section id="faded">
-<h2>You made me <h2 id="cry">cry, </h2>
+<h2>You made me</h2> <h2 id="cry">cry, </h2>
 <h2>but my
     <a class="page" id="tears" href="pagetwo.html">
     <strong>tears</strong> 
