--- a/pageEight.html
+++ b/pageEight.html
@@ -27,6 +27,9 @@
 <h3 id="letterH2">h</h3>
 <h3 id="speccharacter">.</h3>
     </a>
-
+<footer class="foot" id="tears">
+    <a><strong>Thank You by rum.gold</strong></a>
+</footer>
+</div>
 </body>
 </html>
