--- a/pageThree.html
+++ b/pageThree.html
@@ -13,8 +13,8 @@
 <div id="box">
 <section id="faded">
     
-<h2>I, I was lost in my head</h2>
-<h2>Tell me what you</h2>
+<h2>I, I was <div id="cry">lost in my head</div></h2>
+<h2>Tell me what you
 <a class="page" id="tears" href="pagefour.html">
     <strong>said</strong> 
     </a>
