--- a/pagefour.html
+++ b/pagefour.html
@@ -14,7 +14,7 @@
 <div id="box">
 <section id="faded">
     
-<h2>I, I was lost in my</h2>
+<h2>I, I was lost in my
 <a class="page" id="tears" href="pagefive.html">
     <strong>head</strong> 
     </a>
