--- a/pageseven.html
+++ b/pageseven.html
@@ -14,13 +14,13 @@
 <div id="box">
 <section id="faded">
     
-<h2>I, I just wanted to</h2>
+<h2 id="cry">I, I... just wanted to</h2>
+<h2>
 <a class="page" id="tears" href="pageEight.html">
     <strong>thank you</strong> 
     </a>
 </h2>
 </section>
-
 </div>
 </body>
 </html>
