--- a/pagesix.html
+++ b/pagesix.html
@@ -13,10 +13,11 @@
 <body>
 <div id="box">
 <section id="faded">
-    
-<h2>I just wanted to thank</h2>
+
+<h2><div id ="cry"> I just wanted to</div></h2>
+
 <a class="page" id="tears" href="pageseven.html">
-    <strong>you</strong> 
+    <strong>thank you</strong> 
     </a>
 </section>
  
