--- a/pagetwo.html
+++ b/pagetwo.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<div id="box">
+<div id="box2">
 <section id="faded">
 
 <h2>You had me
@@ -22,11 +22,11 @@
 		</text>
 	</svg>
 </div>
-<h2>
-by a role that you couldn't
 </h2>
 <h2>
-ever play out
+by a role that 
+<div id="cry">you couldn't
+ever play out</div>
 </h2>
 </section>
 
